# MyScripts

CMake/: CMakeLists.txt  CMakeOptions.txt  TODO.txt  build.sh  test.cc
CMake/cmake/modules/: UseCheckAPI.cmake  UseClangFormat.cmake  UseClangTidy.cmake
